@@ -277,6 +277,7 @@ Parser:
 * (bug 4783) : Fix for "{{ns:0}} does not render"
 * Improved support for interwiki transclusion
 * (bug 1850) Image link to nonexistent file fixed.
+* (bug 5167) Add {{SUBPAGENAME}} variable
 
 Upload:
 * (bug 2527) Always set destination filename when new file is selected
